--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,24 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("org.jlleitschuh.gradle:ktlint-gradle:$klint_version")
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 group 'com.gme'
-version '0.0.1-SNAPSHOT'
-mainClassName = "io.ktor.server.netty.EngineMain"
+version '0.0.2-SNAPSHOT'
+mainClassName = "com.gme.ApplicationKt"
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
