--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 logback_version=1.2.1
+klint_version=10.0.0
 ktor_version=1.5.4
 kotlin.code.style=official
-kotlin_version=1.4.32
+kotlin_version=1.5.0
 firebase_version=7.3.0
